// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DevTools - AtomViewer Atom details Deep nested values should display atom details with deeply parsed value when an atom is selected 1`] = `
<div>
  <div
    class="mantine-Tabs-root jotai-devtools-shell mantine-xbm20l"
    data-testid="jotai-devtools-shell"
  >
    <div
      class="mantine-1gf2wvo"
      data-testid="shell-resize-bar"
    />
    <div
      class="mantine-1yk50fa"
    >
      <div
        class="mantine-4f8xjx"
      >
        <div
          class="mantine-Group-root mantine-1pxhwx0"
        >
          <h1
            class="mantine-Text-root mantine-Title-root mantine-dfp0rc"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="mantine-Badge-root mantine-1wifcre"
          >
            <span
              class="mantine-h9iq4m mantine-Badge-inner"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="mantine-xg7kom"
        >
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1o23hru"
            title="Toggle color scheme"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-moon-stars"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </button>
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-t0lmpu"
            title="Minimize panel"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-minus"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="mantine-Tabs-tabsList mantine-o8x4z2"
        role="tablist"
      >
        <button
          aria-controls="mantine-r8r-panel-atom-viewer"
          aria-selected="true"
          class="mantine-UnstyledButton-root mantine-Tabs-tab mantine-1dmajq3"
          data-active="true"
          id="mantine-r8r-tab-atom-viewer"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="mantine-14swocp mantine-Tabs-tabIcon"
          >
            <svg
              class="icon icon-tabler icon-tabler-layout-list"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="4"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="14"
              />
            </svg>
          </div>
          <div
            class="mantine-1s8spa1 mantine-Tabs-tabLabel"
          >
            Atom Viewer
          </div>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="mantine-r8r-tab-atom-viewer"
      class="mantine-Tabs-panel mantine-klo26w"
      id="mantine-r8r-panel-atom-viewer"
      role="tabpanel"
    >
      <div
        class=""
        data-panel-group=""
        data-panel-group-direction="horizontal"
        data-panel-group-id=":r8t:"
        style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
      >
        <div
          class=""
          data-panel=""
          data-panel-id=":r8v:"
          data-panel-size="50.0"
          id="data-panel-id-:r8v:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-3a3njo"
          >
            <div
              class="mantine-InputWrapper-root mantine-TextInput-root mantine-1bszv4u"
            >
              <label
                class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
                for="mantine-r91"
                id="mantine-r91-label"
              >
                Search
              </label>
              <div
                class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
              >
                <input
                  aria-invalid="false"
                  class="mantine-Input-input mantine-TextInput-input mantine-1ub2244"
                  id="mantine-r91"
                  placeholder="atom debug label"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="mantine-1gq3tre"
            >
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      countAtom
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                data-active="true"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      &lt;unlabeled-atom&gt;
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                    data-active="true"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-controls="data-panel-id-:r8v:"
          aria-valuemax="70"
          aria-valuemin="30"
          aria-valuenow="50"
          class=""
          data-panel-group-direction="horizontal"
          data-panel-group-id=":r8t:"
          data-panel-resize-handle-enabled="true"
          data-panel-resize-handle-id=":r93:"
          role="separator"
          style="cursor: col-resize; user-select: none;"
          tabindex="0"
        >
          <div
            class="mantine-1cmjlri"
          >
            <div
              class="_jotai-devtools-internal-panel-resize-handle mantine-12yqcld"
            />
          </div>
        </div>
        <div
          class=""
          data-panel=""
          data-panel-id=":r95:"
          data-panel-size="50.0"
          id="data-panel-id-:r95:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-t78e42"
          >
            <div
              class="mantine-Stack-root mantine-a3e3ju"
            >
              <div
                class="mantine-1avyp1d"
              >
                <h1
                  class="mantine-Text-root mantine-Title-root mantine-ifb8vz"
                >
                  Atom Details
                </h1>
                <div
                  class="mantine-Text-root mantine-giipc7"
                >
                  Meta
                </div>
                <div
                  class="mantine-x6ichy"
                >
                  <div
                    class="mantine-Text-root mantine-1fv0pa9"
                    data-testid="display-detail-item-label-Debug Label"
                  >
                    Debug Label
                  </div>
                  <code
                    class="mantine-Code-root mantine-1klorgr"
                    data-testid="display-detail-item-value-<unlabeled-atom>"
                    dir="ltr"
                  >
                    &lt;unlabeled-atom&gt;
                  </code>
                </div>
                <div
                  class="mantine-x6ichy"
                >
                  <div
                    class="mantine-Text-root mantine-1fv0pa9"
                    data-testid="display-detail-item-label-Value type"
                  >
                    Value type
                  </div>
                  <code
                    class="mantine-Code-root mantine-1klorgr"
                    data-testid="display-detail-item-value-atom"
                    dir="ltr"
                  >
                    atom
                  </code>
                </div>
              </div>
              <div
                class="mantine-1avyp1d"
              >
                <div
                  class="mantine-Text-root mantine-1fi314m"
                >
                  Parsed value
                </div>
                <div
                  class="mantine-Prism-root mantine-9heff7"
                  data-testid="atom-parsed-value"
                  translate="no"
                >
                  <button
                    aria-label="Copy value"
                    class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-Prism-copy mantine-r1ykzi"
                    type="button"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 2V1H10V2H5ZM4.75 0C4.33579 0 4 0.335786 4 0.75V1H3.5C2.67157 1 2 1.67157 2 2.5V12.5C2 13.3284 2.67157 14 3.5 14H11.5C12.3284 14 13 13.3284 13 12.5V2.5C13 1.67157 12.3284 1 11.5 1H11V0.75C11 0.335786 10.6642 0 10.25 0H4.75ZM11 2V2.25C11 2.66421 10.6642 3 10.25 3H4.75C4.33579 3 4 2.66421 4 2.25V2H3.5C3.22386 2 3 2.22386 3 2.5V12.5C3 12.7761 3.22386 13 3.5 13H11.5C11.7761 13 12 12.7761 12 12.5V2.5C12 2.22386 11.7761 2 11.5 2H11Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <div
                    class="mantine-ScrollArea-root mantine-Prism-scrollArea mantine-1j1ni8n"
                    dir="ltr"
                    style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
                  >
                    <style>
                      [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
                    </style>
                    <div
                      class="mantine-xlwgkm mantine-ScrollArea-viewport"
                      data-radix-scroll-area-viewport=""
                      style="overflow-x: scroll; overflow-y: scroll;"
                    >
                      <div
                        style="min-width: 100%; display: table;"
                      >
                        <pre
                          class="mantine-1r2c9o1 mantine-Prism-code prism-code language-markdown"
                          dir="ltr"
                          style="color: rgb(33, 37, 41); background-color: rgba(248, 249, 250, 0.65);"
                        >
                          <div
                            class="mantine-1e8ljqt mantine-Prism-line token-line"
                          >
                            <div
                              class="mantine-26ugy1 mantine-Prism-lineContent"
                            >
                              <span
                                class="token plain"
                              >
                                1
                              </span>
                            </div>
                          </div>
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mantine-1avyp1d"
              >
                <div
                  class="mantine-Text-root mantine-hlwjat"
                >
                  Dependents
                </div>
                <div
                  class="mantine-Text-root mantine-1t4da6g"
                >
                  No dependents
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DevTools - AtomViewer Atom details Raw value should display atom details when an atom is selected 1`] = `
<div>
  <div
    class="mantine-Tabs-root jotai-devtools-shell mantine-xbm20l"
    data-testid="jotai-devtools-shell"
  >
    <div
      class="mantine-1gf2wvo"
      data-testid="shell-resize-bar"
    />
    <div
      class="mantine-1yk50fa"
    >
      <div
        class="mantine-4f8xjx"
      >
        <div
          class="mantine-Group-root mantine-1pxhwx0"
        >
          <h1
            class="mantine-Text-root mantine-Title-root mantine-dfp0rc"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="mantine-Badge-root mantine-1wifcre"
          >
            <span
              class="mantine-h9iq4m mantine-Badge-inner"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="mantine-xg7kom"
        >
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1o23hru"
            title="Toggle color scheme"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-moon-stars"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </button>
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-t0lmpu"
            title="Minimize panel"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-minus"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="mantine-Tabs-tabsList mantine-o8x4z2"
        role="tablist"
      >
        <button
          aria-controls="mantine-r1h-panel-atom-viewer"
          aria-selected="true"
          class="mantine-UnstyledButton-root mantine-Tabs-tab mantine-1dmajq3"
          data-active="true"
          id="mantine-r1h-tab-atom-viewer"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="mantine-14swocp mantine-Tabs-tabIcon"
          >
            <svg
              class="icon icon-tabler icon-tabler-layout-list"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="4"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="14"
              />
            </svg>
          </div>
          <div
            class="mantine-1s8spa1 mantine-Tabs-tabLabel"
          >
            Atom Viewer
          </div>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="mantine-r1h-tab-atom-viewer"
      class="mantine-Tabs-panel mantine-klo26w"
      id="mantine-r1h-panel-atom-viewer"
      role="tabpanel"
    >
      <div
        class=""
        data-panel-group=""
        data-panel-group-direction="horizontal"
        data-panel-group-id=":r1j:"
        style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
      >
        <div
          class=""
          data-panel=""
          data-panel-id=":r1l:"
          data-panel-size="50.0"
          id="data-panel-id-:r1l:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-3a3njo"
          >
            <div
              class="mantine-InputWrapper-root mantine-TextInput-root mantine-1bszv4u"
            >
              <label
                class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
                for="mantine-r1n"
                id="mantine-r1n-label"
              >
                Search
              </label>
              <div
                class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
              >
                <input
                  aria-invalid="false"
                  class="mantine-Input-input mantine-TextInput-input mantine-1ub2244"
                  id="mantine-r1n"
                  placeholder="atom debug label"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="mantine-1gq3tre"
            >
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                data-active="true"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      countAtom
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                    data-active="true"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      &lt;unlabeled-atom&gt;
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-controls="data-panel-id-:r1l:"
          aria-valuemax="70"
          aria-valuemin="30"
          aria-valuenow="50"
          class=""
          data-panel-group-direction="horizontal"
          data-panel-group-id=":r1j:"
          data-panel-resize-handle-enabled="true"
          data-panel-resize-handle-id=":r1p:"
          role="separator"
          style="cursor: col-resize; user-select: none;"
          tabindex="0"
        >
          <div
            class="mantine-1cmjlri"
          >
            <div
              class="_jotai-devtools-internal-panel-resize-handle mantine-12yqcld"
            />
          </div>
        </div>
        <div
          class=""
          data-panel=""
          data-panel-id=":r1r:"
          data-panel-size="50.0"
          id="data-panel-id-:r1r:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-t78e42"
          >
            <div
              class="mantine-Stack-root mantine-a3e3ju"
            >
              <div
                class="mantine-1avyp1d"
              >
                <h1
                  class="mantine-Text-root mantine-Title-root mantine-ifb8vz"
                >
                  Atom Details
                </h1>
                <div
                  class="mantine-Text-root mantine-giipc7"
                >
                  Meta
                </div>
                <div
                  class="mantine-x6ichy"
                >
                  <div
                    class="mantine-Text-root mantine-1fv0pa9"
                    data-testid="display-detail-item-label-Debug Label"
                  >
                    Debug Label
                  </div>
                  <code
                    class="mantine-Code-root mantine-1klorgr"
                    data-testid="display-detail-item-value-countAtom"
                    dir="ltr"
                  >
                    countAtom
                  </code>
                </div>
                <div
                  class="mantine-x6ichy"
                >
                  <div
                    class="mantine-Text-root mantine-1fv0pa9"
                    data-testid="display-detail-item-label-Value type"
                  >
                    Value type
                  </div>
                  <code
                    class="mantine-Code-root mantine-1klorgr"
                    data-testid="display-detail-item-value-number"
                    dir="ltr"
                  >
                    number
                  </code>
                </div>
              </div>
              <div
                class="mantine-1avyp1d"
              >
                <div
                  class="mantine-Text-root mantine-1fi314m"
                >
                  Raw value
                </div>
                <div
                  class="mantine-Prism-root mantine-9heff7"
                  data-testid="atom-parsed-value"
                  translate="no"
                >
                  <button
                    aria-label="Copy value"
                    class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-Prism-copy mantine-r1ykzi"
                    type="button"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 2V1H10V2H5ZM4.75 0C4.33579 0 4 0.335786 4 0.75V1H3.5C2.67157 1 2 1.67157 2 2.5V12.5C2 13.3284 2.67157 14 3.5 14H11.5C12.3284 14 13 13.3284 13 12.5V2.5C13 1.67157 12.3284 1 11.5 1H11V0.75C11 0.335786 10.6642 0 10.25 0H4.75ZM11 2V2.25C11 2.66421 10.6642 3 10.25 3H4.75C4.33579 3 4 2.66421 4 2.25V2H3.5C3.22386 2 3 2.22386 3 2.5V12.5C3 12.7761 3.22386 13 3.5 13H11.5C11.7761 13 12 12.7761 12 12.5V2.5C12 2.22386 11.7761 2 11.5 2H11Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <div
                    class="mantine-ScrollArea-root mantine-Prism-scrollArea mantine-1j1ni8n"
                    dir="ltr"
                    style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
                  >
                    <style>
                      [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
                    </style>
                    <div
                      class="mantine-xlwgkm mantine-ScrollArea-viewport"
                      data-radix-scroll-area-viewport=""
                      style="overflow-x: scroll; overflow-y: scroll;"
                    >
                      <div
                        style="min-width: 100%; display: table;"
                      >
                        <pre
                          class="mantine-1r2c9o1 mantine-Prism-code prism-code language-markdown"
                          dir="ltr"
                          style="color: rgb(33, 37, 41); background-color: rgba(248, 249, 250, 0.65);"
                        >
                          <div
                            class="mantine-1e8ljqt mantine-Prism-line token-line"
                          >
                            <div
                              class="mantine-26ugy1 mantine-Prism-lineContent"
                            >
                              <span
                                class="token plain"
                              >
                                0
                              </span>
                            </div>
                          </div>
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mantine-1avyp1d"
              >
                <div
                  class="mantine-Text-root mantine-hlwjat"
                >
                  Dependents
                </div>
                <ol
                  class="mantine-List-root mantine-7vjr0l"
                >
                  <li
                    class="mantine-List-item mantine-1x3wo6v"
                  >
                    <div
                      class="__mantine-ref-itemWrapper mantine-1qill40 mantine-List-itemWrapper"
                    >
                      <span>
                        <code
                          class="mantine-Code-root mantine-1klorgr"
                          data-testid="dependents-list-item-<unlabeled-atom>-0"
                          dir="ltr"
                        >
                          &lt;unlabeled-atom&gt;
                        </code>
                      </span>
                    </div>
                  </li>
                </ol>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DevTools - AtomViewer Atom details Raw value should display the dependents of the atom correctly 1`] = `
<div>
  <div
    class="mantine-Tabs-root jotai-devtools-shell mantine-xbm20l"
    data-testid="jotai-devtools-shell"
  >
    <div
      class="mantine-1gf2wvo"
      data-testid="shell-resize-bar"
    />
    <div
      class="mantine-1yk50fa"
    >
      <div
        class="mantine-4f8xjx"
      >
        <div
          class="mantine-Group-root mantine-1pxhwx0"
        >
          <h1
            class="mantine-Text-root mantine-Title-root mantine-dfp0rc"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="mantine-Badge-root mantine-1wifcre"
          >
            <span
              class="mantine-h9iq4m mantine-Badge-inner"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="mantine-xg7kom"
        >
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1o23hru"
            title="Toggle color scheme"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-moon-stars"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </button>
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-t0lmpu"
            title="Minimize panel"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-minus"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="mantine-Tabs-tabsList mantine-o8x4z2"
        role="tablist"
      >
        <button
          aria-controls="mantine-r23-panel-atom-viewer"
          aria-selected="true"
          class="mantine-UnstyledButton-root mantine-Tabs-tab mantine-1dmajq3"
          data-active="true"
          id="mantine-r23-tab-atom-viewer"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="mantine-14swocp mantine-Tabs-tabIcon"
          >
            <svg
              class="icon icon-tabler icon-tabler-layout-list"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="4"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="14"
              />
            </svg>
          </div>
          <div
            class="mantine-1s8spa1 mantine-Tabs-tabLabel"
          >
            Atom Viewer
          </div>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="mantine-r23-tab-atom-viewer"
      class="mantine-Tabs-panel mantine-klo26w"
      id="mantine-r23-panel-atom-viewer"
      role="tabpanel"
    >
      <div
        class=""
        data-panel-group=""
        data-panel-group-direction="horizontal"
        data-panel-group-id=":r25:"
        style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
      >
        <div
          class=""
          data-panel=""
          data-panel-id=":r27:"
          data-panel-size="50.0"
          id="data-panel-id-:r27:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-3a3njo"
          >
            <div
              class="mantine-InputWrapper-root mantine-TextInput-root mantine-1bszv4u"
            >
              <label
                class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
                for="mantine-r29"
                id="mantine-r29-label"
              >
                Search
              </label>
              <div
                class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
              >
                <input
                  aria-invalid="false"
                  class="mantine-Input-input mantine-TextInput-input mantine-1ub2244"
                  id="mantine-r29"
                  placeholder="atom debug label"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="mantine-1gq3tre"
            >
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      countAtom
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                data-active="true"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      &lt;unlabeled-atom&gt;
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                    data-active="true"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-controls="data-panel-id-:r27:"
          aria-valuemax="70"
          aria-valuemin="30"
          aria-valuenow="50"
          class=""
          data-panel-group-direction="horizontal"
          data-panel-group-id=":r25:"
          data-panel-resize-handle-enabled="true"
          data-panel-resize-handle-id=":r2b:"
          role="separator"
          style="cursor: col-resize; user-select: none;"
          tabindex="0"
        >
          <div
            class="mantine-1cmjlri"
          >
            <div
              class="_jotai-devtools-internal-panel-resize-handle mantine-12yqcld"
            />
          </div>
        </div>
        <div
          class=""
          data-panel=""
          data-panel-id=":r2d:"
          data-panel-size="50.0"
          id="data-panel-id-:r2d:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-t78e42"
          >
            <div
              class="mantine-Stack-root mantine-a3e3ju"
            >
              <div
                class="mantine-1avyp1d"
              >
                <h1
                  class="mantine-Text-root mantine-Title-root mantine-ifb8vz"
                >
                  Atom Details
                </h1>
                <div
                  class="mantine-Text-root mantine-giipc7"
                >
                  Meta
                </div>
                <div
                  class="mantine-x6ichy"
                >
                  <div
                    class="mantine-Text-root mantine-1fv0pa9"
                    data-testid="display-detail-item-label-Debug Label"
                  >
                    Debug Label
                  </div>
                  <code
                    class="mantine-Code-root mantine-1klorgr"
                    data-testid="display-detail-item-value-<unlabeled-atom>"
                    dir="ltr"
                  >
                    &lt;unlabeled-atom&gt;
                  </code>
                </div>
                <div
                  class="mantine-x6ichy"
                >
                  <div
                    class="mantine-Text-root mantine-1fv0pa9"
                    data-testid="display-detail-item-label-Value type"
                  >
                    Value type
                  </div>
                  <code
                    class="mantine-Code-root mantine-1klorgr"
                    data-testid="display-detail-item-value-number"
                    dir="ltr"
                  >
                    number
                  </code>
                </div>
              </div>
              <div
                class="mantine-1avyp1d"
              >
                <div
                  class="mantine-Text-root mantine-1fi314m"
                >
                  Raw value
                </div>
                <div
                  class="mantine-Prism-root mantine-9heff7"
                  data-testid="atom-parsed-value"
                  translate="no"
                >
                  <button
                    aria-label="Copy value"
                    class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-Prism-copy mantine-r1ykzi"
                    type="button"
                  >
                    <svg
                      fill="none"
                      height="15"
                      viewBox="0 0 15 15"
                      width="15"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M5 2V1H10V2H5ZM4.75 0C4.33579 0 4 0.335786 4 0.75V1H3.5C2.67157 1 2 1.67157 2 2.5V12.5C2 13.3284 2.67157 14 3.5 14H11.5C12.3284 14 13 13.3284 13 12.5V2.5C13 1.67157 12.3284 1 11.5 1H11V0.75C11 0.335786 10.6642 0 10.25 0H4.75ZM11 2V2.25C11 2.66421 10.6642 3 10.25 3H4.75C4.33579 3 4 2.66421 4 2.25V2H3.5C3.22386 2 3 2.22386 3 2.5V12.5C3 12.7761 3.22386 13 3.5 13H11.5C11.7761 13 12 12.7761 12 12.5V2.5C12 2.22386 11.7761 2 11.5 2H11Z"
                        fill="currentColor"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <div
                    class="mantine-ScrollArea-root mantine-Prism-scrollArea mantine-1j1ni8n"
                    dir="ltr"
                    style="position: relative; --radix-scroll-area-corner-width: 0px; --radix-scroll-area-corner-height: 0px;"
                  >
                    <style>
                      [data-radix-scroll-area-viewport]{scrollbar-width:none;-ms-overflow-style:none;-webkit-overflow-scrolling:touch;}[data-radix-scroll-area-viewport]::-webkit-scrollbar{display:none}
                    </style>
                    <div
                      class="mantine-xlwgkm mantine-ScrollArea-viewport"
                      data-radix-scroll-area-viewport=""
                      style="overflow-x: scroll; overflow-y: scroll;"
                    >
                      <div
                        style="min-width: 100%; display: table;"
                      >
                        <pre
                          class="mantine-1r2c9o1 mantine-Prism-code prism-code language-markdown"
                          dir="ltr"
                          style="color: rgb(33, 37, 41); background-color: rgba(248, 249, 250, 0.65);"
                        >
                          <div
                            class="mantine-1e8ljqt mantine-Prism-line token-line"
                          >
                            <div
                              class="mantine-26ugy1 mantine-Prism-lineContent"
                            >
                              <span
                                class="token plain"
                              >
                                0
                              </span>
                            </div>
                          </div>
                        </pre>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="mantine-1avyp1d"
              >
                <div
                  class="mantine-Text-root mantine-hlwjat"
                >
                  Dependents
                </div>
                <div
                  class="mantine-Text-root mantine-1t4da6g"
                >
                  No dependents
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DevTools - AtomViewer List of atoms Search should display an error if no atoms are found 1`] = `
<div>
  <div
    class="mantine-Tabs-root jotai-devtools-shell mantine-xbm20l"
    data-testid="jotai-devtools-shell"
  >
    <div
      class="mantine-1gf2wvo"
      data-testid="shell-resize-bar"
    />
    <div
      class="mantine-1yk50fa"
    >
      <div
        class="mantine-4f8xjx"
      >
        <div
          class="mantine-Group-root mantine-1pxhwx0"
        >
          <h1
            class="mantine-Text-root mantine-Title-root mantine-dfp0rc"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="mantine-Badge-root mantine-1wifcre"
          >
            <span
              class="mantine-h9iq4m mantine-Badge-inner"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="mantine-xg7kom"
        >
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1o23hru"
            title="Toggle color scheme"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-moon-stars"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </button>
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-t0lmpu"
            title="Minimize panel"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-minus"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="mantine-Tabs-tabsList mantine-o8x4z2"
        role="tablist"
      >
        <button
          aria-controls="mantine-r15-panel-atom-viewer"
          aria-selected="true"
          class="mantine-UnstyledButton-root mantine-Tabs-tab mantine-1dmajq3"
          data-active="true"
          id="mantine-r15-tab-atom-viewer"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="mantine-14swocp mantine-Tabs-tabIcon"
          >
            <svg
              class="icon icon-tabler icon-tabler-layout-list"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="4"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="14"
              />
            </svg>
          </div>
          <div
            class="mantine-1s8spa1 mantine-Tabs-tabLabel"
          >
            Atom Viewer
          </div>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="mantine-r15-tab-atom-viewer"
      class="mantine-Tabs-panel mantine-klo26w"
      id="mantine-r15-panel-atom-viewer"
      role="tabpanel"
    >
      <div
        class=""
        data-panel-group=""
        data-panel-group-direction="horizontal"
        data-panel-group-id=":r17:"
        style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
      >
        <div
          class=""
          data-panel=""
          data-panel-id=":r19:"
          data-panel-size="50.0"
          id="data-panel-id-:r19:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-3a3njo"
          >
            <div
              class="mantine-InputWrapper-root mantine-TextInput-root mantine-1bszv4u"
            >
              <label
                class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
                for="mantine-r1b"
                id="mantine-r1b-label"
              >
                Search
              </label>
              <div
                class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
              >
                <input
                  aria-invalid="false"
                  class="mantine-Input-input mantine-TextInput-input mantine-1ub2244"
                  id="mantine-r1b"
                  placeholder="atom debug label"
                  type="text"
                  value="abc 123"
                />
              </div>
            </div>
            <div
              class="mantine-1gq3tre"
            />
            <div
              class="mantine-Group-root mantine-1p6trzd"
            >
              <svg
                class="icon icon-tabler icon-tabler-alert-circle"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="9"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="16"
                  y2="16"
                />
              </svg>
              <div
                class="mantine-Text-root mantine-1fs6j1"
                data-testid="atom-list-no-atoms-found-message"
              >
                No Atoms found!
              </div>
            </div>
          </div>
        </div>
        <div
          aria-controls="data-panel-id-:r19:"
          aria-valuemax="70"
          aria-valuemin="30"
          aria-valuenow="50"
          class=""
          data-panel-group-direction="horizontal"
          data-panel-group-id=":r17:"
          data-panel-resize-handle-enabled="true"
          data-panel-resize-handle-id=":r1d:"
          role="separator"
          style="cursor: col-resize; user-select: none;"
          tabindex="0"
        >
          <div
            class="mantine-1cmjlri"
          >
            <div
              class="_jotai-devtools-internal-panel-resize-handle mantine-12yqcld"
            />
          </div>
        </div>
        <div
          class=""
          data-panel=""
          data-panel-id=":r1f:"
          data-panel-size="50.0"
          id="data-panel-id-:r1f:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-t78e42"
          >
            <div
              class="mantine-1j5dnc2"
            >
              <div
                class="mantine-Text-root mantine-kjyt4b"
              >
                Select an atom from the left panel to view the details
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DevTools - AtomViewer List of atoms Search should search for atoms correctly 1`] = `
<div>
  <div
    class="mantine-Tabs-root jotai-devtools-shell mantine-xbm20l"
    data-testid="jotai-devtools-shell"
  >
    <div
      class="mantine-1gf2wvo"
      data-testid="shell-resize-bar"
    />
    <div
      class="mantine-1yk50fa"
    >
      <div
        class="mantine-4f8xjx"
      >
        <div
          class="mantine-Group-root mantine-1pxhwx0"
        >
          <h1
            class="mantine-Text-root mantine-Title-root mantine-dfp0rc"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="mantine-Badge-root mantine-1wifcre"
          >
            <span
              class="mantine-h9iq4m mantine-Badge-inner"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="mantine-xg7kom"
        >
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1o23hru"
            title="Toggle color scheme"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-moon-stars"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </button>
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-t0lmpu"
            title="Minimize panel"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-minus"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="mantine-Tabs-tabsList mantine-o8x4z2"
        role="tablist"
      >
        <button
          aria-controls="mantine-rp-panel-atom-viewer"
          aria-selected="true"
          class="mantine-UnstyledButton-root mantine-Tabs-tab mantine-1dmajq3"
          data-active="true"
          id="mantine-rp-tab-atom-viewer"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="mantine-14swocp mantine-Tabs-tabIcon"
          >
            <svg
              class="icon icon-tabler icon-tabler-layout-list"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="4"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="14"
              />
            </svg>
          </div>
          <div
            class="mantine-1s8spa1 mantine-Tabs-tabLabel"
          >
            Atom Viewer
          </div>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="mantine-rp-tab-atom-viewer"
      class="mantine-Tabs-panel mantine-klo26w"
      id="mantine-rp-panel-atom-viewer"
      role="tabpanel"
    >
      <div
        class=""
        data-panel-group=""
        data-panel-group-direction="horizontal"
        data-panel-group-id=":rr:"
        style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
      >
        <div
          class=""
          data-panel=""
          data-panel-id=":rt:"
          data-panel-size="50.0"
          id="data-panel-id-:rt:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-3a3njo"
          >
            <div
              class="mantine-InputWrapper-root mantine-TextInput-root mantine-1bszv4u"
            >
              <label
                class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
                for="mantine-rv"
                id="mantine-rv-label"
              >
                Search
              </label>
              <div
                class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
              >
                <input
                  aria-invalid="false"
                  class="mantine-Input-input mantine-TextInput-input mantine-1ub2244"
                  id="mantine-rv"
                  placeholder="atom debug label"
                  type="text"
                  value="count"
                />
              </div>
            </div>
            <div
              class="mantine-1gq3tre"
            >
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      countAtom
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-controls="data-panel-id-:rt:"
          aria-valuemax="70"
          aria-valuemin="30"
          aria-valuenow="50"
          class=""
          data-panel-group-direction="horizontal"
          data-panel-group-id=":rr:"
          data-panel-resize-handle-enabled="true"
          data-panel-resize-handle-id=":r11:"
          role="separator"
          style="cursor: col-resize; user-select: none;"
          tabindex="0"
        >
          <div
            class="mantine-1cmjlri"
          >
            <div
              class="_jotai-devtools-internal-panel-resize-handle mantine-12yqcld"
            />
          </div>
        </div>
        <div
          class=""
          data-panel=""
          data-panel-id=":r13:"
          data-panel-size="50.0"
          id="data-panel-id-:r13:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-t78e42"
          >
            <div
              class="mantine-1j5dnc2"
            >
              <div
                class="mantine-Text-root mantine-kjyt4b"
              >
                Select an atom from the left panel to view the details
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DevTools - AtomViewer List of atoms should render atom viewer with correct atoms without provider 1`] = `
<div>
  <div
    class="mantine-Tabs-root jotai-devtools-shell mantine-xbm20l"
    data-testid="jotai-devtools-shell"
  >
    <div
      class="mantine-1gf2wvo"
      data-testid="shell-resize-bar"
    />
    <div
      class="mantine-1yk50fa"
    >
      <div
        class="mantine-4f8xjx"
      >
        <div
          class="mantine-Group-root mantine-1pxhwx0"
        >
          <h1
            class="mantine-Text-root mantine-Title-root mantine-dfp0rc"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="mantine-Badge-root mantine-1wifcre"
          >
            <span
              class="mantine-h9iq4m mantine-Badge-inner"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="mantine-xg7kom"
        >
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1o23hru"
            title="Toggle color scheme"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-moon-stars"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </button>
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-t0lmpu"
            title="Minimize panel"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-minus"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="mantine-Tabs-tabsList mantine-o8x4z2"
        role="tablist"
      >
        <button
          aria-controls="mantine-rd-panel-atom-viewer"
          aria-selected="true"
          class="mantine-UnstyledButton-root mantine-Tabs-tab mantine-1dmajq3"
          data-active="true"
          id="mantine-rd-tab-atom-viewer"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="mantine-14swocp mantine-Tabs-tabIcon"
          >
            <svg
              class="icon icon-tabler icon-tabler-layout-list"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="4"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="14"
              />
            </svg>
          </div>
          <div
            class="mantine-1s8spa1 mantine-Tabs-tabLabel"
          >
            Atom Viewer
          </div>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="mantine-rd-tab-atom-viewer"
      class="mantine-Tabs-panel mantine-klo26w"
      id="mantine-rd-panel-atom-viewer"
      role="tabpanel"
    >
      <div
        class=""
        data-panel-group=""
        data-panel-group-direction="horizontal"
        data-panel-group-id=":rf:"
        style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
      >
        <div
          class=""
          data-panel=""
          data-panel-id=":rh:"
          data-panel-size="50.0"
          id="data-panel-id-:rh:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-3a3njo"
          >
            <div
              class="mantine-InputWrapper-root mantine-TextInput-root mantine-1bszv4u"
            >
              <label
                class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
                for="mantine-rj"
                id="mantine-rj-label"
              >
                Search
              </label>
              <div
                class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
              >
                <input
                  aria-invalid="false"
                  class="mantine-Input-input mantine-TextInput-input mantine-1ub2244"
                  id="mantine-rj"
                  placeholder="atom debug label"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="mantine-1gq3tre"
            >
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      countAtom
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
              <button
                class="mantine-UnstyledButton-root mantine-NavLink-root mantine-akuwoz"
                type="button"
              >
                <span
                  class="mantine-1nksqbd mantine-NavLink-body"
                >
                  <span
                    class="mantine-Text-root mantine-NavLink-label mantine-1lpq23f"
                  >
                    <div
                      class="mantine-Text-root mantine-1yre4n6"
                    >
                      &lt;unlabeled-atom&gt;
                    </div>
                  </span>
                  <span
                    class="mantine-Text-root mantine-NavLink-description mantine-zd66l8"
                  />
                </span>
                <span
                  class="mantine-1vy961i mantine-NavLink-rightSection"
                >
                  <svg
                    class="icon icon-tabler icon-tabler-chevron-right"
                    fill="none"
                    height="12"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    width="12"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                      stroke="none"
                    />
                    <polyline
                      points="9 6 15 12 9 18"
                    />
                  </svg>
                </span>
              </button>
              <div
                aria-hidden="true"
                class="mantine-1avyp1d"
                style="box-sizing: border-box; display: none; height: 0px; overflow: hidden;"
              >
                <div
                  style="opacity: 0; transition: opacity 200ms ease;"
                >
                  <div
                    class="mantine-35zpge mantine-NavLink-children"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-controls="data-panel-id-:rh:"
          aria-valuemax="70"
          aria-valuemin="30"
          aria-valuenow="50"
          class=""
          data-panel-group-direction="horizontal"
          data-panel-group-id=":rf:"
          data-panel-resize-handle-enabled="true"
          data-panel-resize-handle-id=":rl:"
          role="separator"
          style="cursor: col-resize; user-select: none;"
          tabindex="0"
        >
          <div
            class="mantine-1cmjlri"
          >
            <div
              class="_jotai-devtools-internal-panel-resize-handle mantine-12yqcld"
            />
          </div>
        </div>
        <div
          class=""
          data-panel=""
          data-panel-id=":rn:"
          data-panel-size="50.0"
          id="data-panel-id-:rn:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-t78e42"
          >
            <div
              class="mantine-1j5dnc2"
            >
              <div
                class="mantine-Text-root mantine-kjyt4b"
              >
                Select an atom from the left panel to view the details
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DevTools - AtomViewer List of atoms should render atom viewer without any errors if there are no atoms 1`] = `
<div>
  <div
    class="mantine-Tabs-root jotai-devtools-shell mantine-xbm20l"
    data-testid="jotai-devtools-shell"
  >
    <div
      class="mantine-1gf2wvo"
      data-testid="shell-resize-bar"
    />
    <div
      class="mantine-1yk50fa"
    >
      <div
        class="mantine-4f8xjx"
      >
        <div
          class="mantine-Group-root mantine-1pxhwx0"
        >
          <h1
            class="mantine-Text-root mantine-Title-root mantine-dfp0rc"
          >
            👻 Jōtai DevTools
          </h1>
          <div
            class="mantine-Badge-root mantine-1wifcre"
          >
            <span
              class="mantine-h9iq4m mantine-Badge-inner"
            >
              Alpha
            </span>
          </div>
        </div>
        <div
          class="mantine-xg7kom"
        >
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-1o23hru"
            title="Toggle color scheme"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-moon-stars"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <path
                d="M12 3c.132 0 .263 0 .393 0a7.5 7.5 0 0 0 7.92 12.446a9 9 0 1 1 -8.313 -12.454z"
              />
              <path
                d="M17 4a2 2 0 0 0 2 2a2 2 0 0 0 -2 2a2 2 0 0 0 -2 -2a2 2 0 0 0 2 -2"
              />
              <path
                d="M19 11h2m-1 -1v2"
              />
            </svg>
          </button>
          <button
            class="mantine-UnstyledButton-root mantine-ActionIcon-root mantine-t0lmpu"
            title="Minimize panel"
            type="button"
          >
            <svg
              class="icon icon-tabler icon-tabler-minus"
              fill="none"
              height="16"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <line
                x1="5"
                x2="19"
                y1="12"
                y2="12"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        aria-orientation="horizontal"
        class="mantine-Tabs-tabsList mantine-o8x4z2"
        role="tablist"
      >
        <button
          aria-controls="mantine-r1-panel-atom-viewer"
          aria-selected="true"
          class="mantine-UnstyledButton-root mantine-Tabs-tab mantine-1dmajq3"
          data-active="true"
          id="mantine-r1-tab-atom-viewer"
          role="tab"
          tabindex="0"
          type="button"
        >
          <div
            class="mantine-14swocp mantine-Tabs-tabIcon"
          >
            <svg
              class="icon icon-tabler icon-tabler-layout-list"
              fill="none"
              height="14"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="14"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h24v24H0z"
                fill="none"
                stroke="none"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="4"
              />
              <rect
                height="6"
                rx="2"
                width="16"
                x="4"
                y="14"
              />
            </svg>
          </div>
          <div
            class="mantine-1s8spa1 mantine-Tabs-tabLabel"
          >
            Atom Viewer
          </div>
        </button>
      </div>
    </div>
    <div
      aria-labelledby="mantine-r1-tab-atom-viewer"
      class="mantine-Tabs-panel mantine-klo26w"
      id="mantine-r1-panel-atom-viewer"
      role="tabpanel"
    >
      <div
        class=""
        data-panel-group=""
        data-panel-group-direction="horizontal"
        data-panel-group-id=":r3:"
        style="display: flex; flex-direction: row; height: 100%; overflow: hidden; width: 100%;"
      >
        <div
          class=""
          data-panel=""
          data-panel-id=":r5:"
          data-panel-size="50.0"
          id="data-panel-id-:r5:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-3a3njo"
          >
            <div
              class="mantine-InputWrapper-root mantine-TextInput-root mantine-1bszv4u"
            >
              <label
                class="mantine-InputWrapper-label mantine-TextInput-label mantine-ittua2"
                for="mantine-r7"
                id="mantine-r7-label"
              >
                Search
              </label>
              <div
                class="mantine-Input-wrapper mantine-TextInput-wrapper mantine-12sbrde"
              >
                <input
                  aria-invalid="false"
                  class="mantine-Input-input mantine-TextInput-input mantine-1ub2244"
                  id="mantine-r7"
                  placeholder="atom debug label"
                  type="text"
                  value=""
                />
              </div>
            </div>
            <div
              class="mantine-1gq3tre"
            />
            <div
              class="mantine-Group-root mantine-1p6trzd"
            >
              <svg
                class="icon icon-tabler icon-tabler-alert-circle"
                fill="none"
                height="16"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                  stroke="none"
                />
                <circle
                  cx="12"
                  cy="12"
                  r="9"
                />
                <line
                  x1="12"
                  x2="12"
                  y1="8"
                  y2="12"
                />
                <line
                  x1="12"
                  x2="12.01"
                  y1="16"
                  y2="16"
                />
              </svg>
              <div
                class="mantine-Text-root mantine-1fs6j1"
                data-testid="atom-list-no-atoms-found-message"
              >
                No Atoms found!
              </div>
            </div>
          </div>
        </div>
        <div
          aria-controls="data-panel-id-:r5:"
          aria-valuemax="70"
          aria-valuemin="30"
          aria-valuenow="50"
          class=""
          data-panel-group-direction="horizontal"
          data-panel-group-id=":r3:"
          data-panel-resize-handle-enabled="true"
          data-panel-resize-handle-id=":r9:"
          role="separator"
          style="cursor: col-resize; user-select: none;"
          tabindex="0"
        >
          <div
            class="mantine-1cmjlri"
          >
            <div
              class="_jotai-devtools-internal-panel-resize-handle mantine-12yqcld"
            />
          </div>
        </div>
        <div
          class=""
          data-panel=""
          data-panel-id=":rb:"
          data-panel-size="50.0"
          id="data-panel-id-:rb:"
          style="flex-basis: 0px; flex-grow: 50; flex-shrink: 1; overflow: auto;"
        >
          <div
            class="mantine-t78e42"
          >
            <div
              class="mantine-1j5dnc2"
            >
              <div
                class="mantine-Text-root mantine-kjyt4b"
              >
                Select an atom from the left panel to view the details
                 
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
